force-app/main/default/objects/Asset_Quoteline_Mapping__mdt/Asset_Quoteline_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>This metadata will use for SDT-24848, it contains field mapping of Asset and Quoteline objects where we have data mismatch</description>
    <label>Asset Quoteline Mapping</label>
    <pluralLabel>Asset Quoteline Mappings</pluralLabel>
</CustomObject>