force-app/main/default/objects/Asset_Quoteline_Mapping__mdt/fields/AssetDataType__c.field-meta.xml
<CustomField>
    <fullName>AssetDataType__c</fullName>
    <description>This will refer the Asset fields Data Type</description>
    <label>AssetDataType</label>
    <length>250</length>
    <type>Text</type>
</CustomField>