force-app/main/default/objects/Asset_Quoteline_Mapping__mdt/fields/AssetField__c.field-meta.xml
<CustomField>
    <fullName>AssetField__c</fullName>
    <description>This field will refer the mismatched Asset fields</description>
    <label>AssetField</label>
    <length>250</length>
    <type>Text</type>
</CustomField>