force-app/main/default/objects/Asset_Quoteline_Mapping__mdt/fields/AssetFieldValue__c.field-meta.xml
<CustomField>
    <fullName>AssetFieldValue__c</fullName>
    <description>This field will contain the value of Asset field</description>
    <label>AssetFieldValue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>