force-app/main/default/objects/Asset_Quoteline_Mapping__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field will refer the active row</description>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>