force-app/main/default/objects/Asset_Quoteline_Mapping__mdt/fields/IsAPIEnabled__c.field-meta.xml
<CustomField>
    <fullName>IsAPIEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be used to map the API Quoteline fields with Asset</description>
    <label>IsAPIEnabled</label>
    <type>Checkbox</type>
</CustomField>