force-app/main/default/objects/Asset_Quoteline_Mapping__mdt/fields/IsDirectlyMapped__c.field-meta.xml
<CustomField>
    <fullName>IsDirectlyMapped__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be used to map the directly matched Asset fields with Quoteline fields</description>
    <label>IsDirectlyMapped</label>
    <type>Checkbox</type>
</CustomField>