force-app/main/default/objects/Asset_Quoteline_Mapping__mdt/fields/QuoteLineField__c.field-meta.xml
<CustomField>
    <fullName>QuoteLineField__c</fullName>
    <description>This field will refer the mismatched Quoteline fields</description>
    <label>QuoteLineField</label>
    <length>250</length>
    <type>Text</type>
</CustomField>