force-app/main/default/objects/Asset_Quoteline_Mapping__mdt/fields/QuoteLineFieldValue__c.field-meta.xml
<CustomField>
    <fullName>QuoteLineFieldValue__c</fullName>
    <description>This field will refer the mismatched Quoteline fields value</description>
    <label>QuoteLineFieldValue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>